--- a/Front-End/src/pages/Login/LoginPage.css
+++ b/Front-End/src/pages/Login/LoginPage.css
@@ -1,4 +1,3 @@
-/* src/pages/LoginPage.css */
 .login-container {
     display: flex;
     justify-content: center;
@@ -10,7 +9,7 @@
   }
   
   .login-form {
-    background: rgba(255, 255, 255, 0.9); /* Fundo branco semi-transparente */
+    background: rgba(255, 255, 255, 0.9); 
     padding: 20px;
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
@@ -19,7 +18,7 @@
   }
   
   .input {
-    margin-bottom: 16px; /* Espaço entre os campos de input */
+    margin-bottom: 16px; 
   }
   
   .button {
