--- a/Front-End/src/components/ActivityCard/ActivityCard.css
+++ b/Front-End/src/components/ActivityCard/ActivityCard.css
@@ -1,5 +1,3 @@
-/* src/components/ActivityCard.css */
-
 .activity-card {
     margin-top: 159px;
     position: relative;
@@ -64,12 +62,12 @@
 
 .activity-card-icon {
     position: absolute;
-    top:15px; /* Ajuste conforme necessário */
+    top:15px; 
     transform: translateX(-50%);
-    background-color: rgba(226, 226, 226, 0.663); /* Cor de fundo do círculo */
-    border-radius: 50%; /* Faz com que o círculo tenha bordas arredondadas */
-    padding: 8px; /* Espaçamento interno do círculo */
-    border: 2px solid #ddd; /* Borda do círculo */
+    background-color: rgba(226, 226, 226, 0.663); 
+    border-radius: 50%; 
+    padding: 8px; 
+    border: 2px solid #ddd;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -77,10 +75,10 @@
 }
 
 .activity-card-hover-content .endpoint-item {
-  transition: background-color 0.3s ease; /* Suaviza a transição do fundo */
+  transition: background-color 0.3s ease; 
 }
 
 .activity-card-hover-content .endpoint-item:hover {
-  background-color: #edf7e8; /* Cor de destaque suave */
-  border-radius: 10px; /* Borda suave */
+  background-color: #edf7e8; 
+  border-radius: 10px; 
 }
